# genawaiter

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README-crates-io.md  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: await.rs  error_propagation.rs  linked_list.rs  recursion.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/error_propagation/: Cargo.toml
examples/error_propagation/src/: main.rs
examples/linked_list/: Cargo.toml
examples/linked_list/src/: main.rs
gen-macro/: Cargo.toml
gen-macro/src/: lib.rs
gen_proc_macro/: .pre-commit-config.yaml  Cargo.toml
gen_proc_macro/src/: common.rs  lib.rs  rc.rs  stack.rs  sync.rs  sync_rc.rs
genawaiter-macro/: Cargo.toml
genawaiter-macro/src/: lib.rs
genawaiter-proc-macro/: Cargo.toml
genawaiter-proc-macro/examples/: await.rs
genawaiter-proc-macro/src/: common.rs  lib.rs  rc.rs  stack.rs  sync.rs  visit.rs
genawaiter_proc_macro/: Cargo.toml
genawaiter_proc_macro/src/: common.rs  lib.rs  rc.rs  stack.rs  sync.rs
src/: core.rs  engine.rs  ext.rs  generator.rs  iterator.rs  lib.rs  macros.rs  ops.rs  safe_rc.rs  state.rs  testing.rs  waker.rs
src/rc/: engine.rs  generator.rs  iterator.rs  mod.rs  nightly_tests.rs  stream.rs
src/safe_rc/: engine.rs  generator.rs  iterator.rs  mod.rs
src/stack/: engine.rs  generator.rs  iterator.rs  macros.rs  mod.rs  nightly_tests.rs  stream.rs
src/sync/: box_dyn.rs  boxed.rs  engine.rs  generator.rs  iterator.rs  mod.rs  nightly_tests.rs  stream.rs
tests/: rc.rs  stack.rs  sync.rs  ui.rs
tests/ui/: fail_producer_with_argument.rs  fail_producer_with_argument.stderr  rc_fail_not_awaiting_yield.rs  rc_fail_not_awaiting_yield.stderr  stack_fail_not_awaiting_yield.rs  stack_fail_not_awaiting_yield.stderr  stack_fail_when_co_is_static.rs  stack_fail_when_co_is_static.stderr  sync_fail_not_awaiting_yield.rs  sync_fail_not_awaiting_yield.stderr
tmp/: Cargo.toml
tmp/src/: lib.rs
