[package]
name = "gen_proc_macro"
version = "0.0.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
description = "procedural macro for generators (genawaiter)"
keywords = ["proc_macro", "procmacro", "async"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version = "1.0", features = [
    "derive",
    "parsing",
    "printing",
    "extra-traits",
    "full",
    "visit-mut",
    "clone-impls"
] }
proc-macro-error = "0.4"
