[package]
name = "genawaiter-proc-macro"
version = "0.0.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "procedural macro for generators (genawaiter)"
edition = "2018"
repository = "https://github.com/whatisaphone/genawaiter"
readme = "../README.md"
keywords = ["generator", "yield", "coroutine", "async", "await"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = {version = "1.0", features = [
    "derive",
    "parsing",
    "printing",
    "extra-traits",
    "full",
    "visit",
    "visit-mut",
    "clone-impls"
] }
proc-macro-error = "0.4"
proc-macro-hack = "0.5"

[features]
proc_macro_example = []
